# SP-2023

./: .gitignore  .gitmodules  README.md
.github/workflows/: check_branch_name.yml  check_duplication.yml  code_format_checker.yml
tasks/task_00/: readme.md
tasks/task_02/: README.md
tasks/task_03/: old_version_task_03.md  readme.md
tasks/task_04/: readme.md
tasks/task_05/: readme.md
tasks/task_06/: readme.md
tasks/task_07/: readme.md
tasks/task_08/: readme.md
trunk/210647/task_03/: README.md
trunk/210647/task_03/include/: CostCalculator.cpp  CostCalculator.h
trunk/210647/task_03/src/: Main.cpp
trunk/210647/task_03/test/: CostCalculator_tests.cpp
trunk/210647/task_04/: README.md
trunk/210647/task_04/src/: CMakeLists.txt  GameWindow.cpp  GameWindow.h  GuessNumberGameWindow.cpp  GuessNumberGameWindow.h  GuessNumberSettings.cpp  GuessNumberSettings.h  Main.cpp  RockPaperScissorsGameWindow.cpp  RockPaperScissorsGameWindow.h  RockPaperScissorsSettings.cpp  RockPaperScissorsSettings.h  Settings.cpp  Settings.h  Window.cpp  Window.h
trunk/II00840/task_01/: README.md
trunk/II00840/task_01/src/: Lab_02.cpp
trunk/PO210639/task_02/: README.md
trunk/PO210639/task_03/: CMakeLists.txt  README.md
trunk/PO210639/task_03/include/: SortAndFindMinMax.cpp  SortAndFindMinMax.h
trunk/PO210639/task_03/src/: main.cpp
trunk/PO210639/task_03/test/: SortAndFindMinMax_tests.cpp  SortAndFindMinMax_tests.h
trunk/PO210639/task_04/: README.md
trunk/PO210639/task_04/src/: CMakeLists.txt  Cd.cpp  Cd.h  Cls.cpp  Cls.h  Color.cpp  Color.h  CommandClass.cpp  CommandClass.h  ConsoleWindow.cpp  ConsoleWindow.h  Dir.cpp  Dir.h  Help.cpp  Help.h  Mkdir.cpp  Mkdir.h  Window.cpp  Window.h  folder.cpp  folder.h  lab4.cpp  tempStrings.cpp  tempStrings.h
trunk/PO210639/task_05/: README.md
trunk/PO210639/task_06/: README.md
trunk/PO210639/task_07/: README.md
trunk/PO210639/task_08/: CMakeLists.txt  README.md
trunk/PO210639/task_08/include/: doctor.cpp  doctor.h  hospitalLibrary.cpp  hospitalLibrary.h  neurologist.cpp  neurologist.h  patient.cpp  patient.h  psychiatrist.cpp  psychiatrist.h  therapist.cpp  therapist.h
trunk/PO210639/task_08/src/: Resource.h  Resource210639.h  framework.h  framework210639.h  main.cpp  targetver.h  targetver210639.h  winapi.cpp  winapi.rc  winapi210639.h
trunk/PO210640/task_02/: README.md
trunk/PO210640/task_03/: README.md
trunk/PO210640/task_04/: README.md
trunk/PO210640/task_05/: README.md
trunk/PO210640/task_06/: README.md
trunk/PO210640/task_07/: README.md
trunk/PO210641/task_02/: README.md
trunk/PO210641/task_03/: CMakeLists.txt  README.md
trunk/PO210641/task_04/: README.md
trunk/PO210641/task_04/src/: CMakeLists.txt  GameWindow.cpp  GameWindow.h  GuessNumberGameWindow.cpp  GuessNumberGameWindow.h  GuessNumberSettings.cpp  GuessNumberSettings.h  Main.cpp  RockPaperScissorsGameWindow.cpp  RockPaperScissorsGameWindow.h  RockPaperScissorsSettings.cpp  RockPaperScissorsSettings.h  Settings.cpp  Settings.h  Window.cpp  Window.h
trunk/PO210641/task_05/: README.md
trunk/PO210641/task_05/src/: AtomicCombinedString.cpp  CMakeLists.txt  Main.cpp  MutexCombinedString.cpp
trunk/PO210641/task_06/: README.md
trunk/PO210641/task_07/: README.md
trunk/PO210642/task_02/: README.md
trunk/PO210642/task_03/: CMakeLists.txt  README.md
trunk/PO210642/task_04/: README.md
trunk/PO210642/task_04/src/: CMakeLists.txt  FolderObject.h  FolderWindow.cpp  FolderWindow.h  WFile.cpp  WFile.h  WFolder.cpp  WFolder.h  Window.cpp  Window.h  main.cpp
trunk/PO210642/task_05/: README.md
trunk/PO210642/task_05/src/: Atomic.cpp  CMakeLists.txt  Mutex.cpp
trunk/PO210642/task_06/: README.md
trunk/PO210642/task_07/: README.md
trunk/PO210643/task_02/: README.md
trunk/PO210643/task_03/: CMakeLists.txt  README.md
trunk/PO210643/task_04/: CMakeLists.txt  README.md
trunk/PO210643/task_04/include/: BrowserWindow.cpp  BrowserWindow.h  Tab.cpp  Tab.h  Window.cpp  Window.h
trunk/PO210643/task_04/src/: BrowserWindow.cpp  Tab.h  Window.cpp  Window.h  main.cpp
trunk/PO210643/task_05/: CMakeLists.txt  README.md
trunk/PO210643/task_05/src/: Atomic.cpp  Mutex.cpp
trunk/PO210643/task_06/: CMakeLists.txt  README.md
trunk/PO210643/task_07/: CMakeLists.txt  README.md
trunk/PO210643/task_08/: CMakeLists.txt  README.md
trunk/PO210643/task_08/include/: cardiologist.cpp  cardiologist.h  dentist.cpp  dentist.h  doctor.cpp  doctor.h  hospitalDLL.cpp  hospitalDLL.h  lor.cpp  lor.h  patient.cpp  patient.h
trunk/PO210643/task_08/src/: RCa09152  WindowsProject1.cpp  WindowsProject1.h  main.cpp
trunk/PO210643/task__06/: README.md
trunk/PO210644/task_02/: README.md
trunk/PO210644/task_04/: README.md
trunk/PO210644/task_05/: README.md
trunk/PO210644/task_06/: README.md
trunk/PO210644/task_07/: README.md
trunk/PO210646/task_02/: README.md
trunk/PO210646/task_05/: README.md
trunk/PO210647/task_02/: README.md
trunk/PO210647/task_03/: CMakeLists.txt  README.md
trunk/PO210647/task_03/include/: CostCalculator.cpp  CostCalculator.h
trunk/PO210647/task_03/src/: Main.cpp
trunk/PO210647/task_03/test/: CostCalculator_tests.cpp
trunk/PO210648/task_01/: README.md
trunk/PO210648/task_02/: README.md
trunk/PO210648/task_03/: CMakeLists.txt  README.md
trunk/PO210648/task_03/include/: QuadraticEquation.cpp  QuadraticEquation.h
trunk/PO210648/task_03/sln/test1/: entropyCalculator.cpp  test1.sln  test1.vcxproj  test1.vcxproj.filters
trunk/PO210648/task_03/sln/test2/: test2.vcxproj  test2.vcxproj.filters
trunk/PO210648/task_03/src/: main.cpp
trunk/PO210648/task_03/src/test1/: entropyCalculator.cpp
trunk/PO210648/task_03/src/test2/: test2.cpp
trunk/PO210648/task_04/: README.md
trunk/PO210648/task_05/: README.md
trunk/PO210648/task_06/: README.md
trunk/PO210648/task_07/: README.md
trunk/PO210719/task_02/: README.md
trunk/PO210719/task_03/: readme.md
trunk/PO210719/task_04/: readme.md
trunk/PO210719/task_05/: readme.md
trunk/PO210719/task_06/: README.md
trunk/PO210719/task_07/: README.md
(+161 files in other folders)
