cmake_minimum_required(VERSION 3.5)

project(task_04)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(po8_210639_task_04
        lab4.cpp
        Cd.cpp
        Cls.cpp
        Color.cpp
        CommandClass.cpp
        ConsoleWindow.cpp
        Dir.cpp
        folder.cpp
        Help.cpp
        Mkdir.cpp
        tempStrings.cpp
        Window.cpp
)